kubernetes/apps/flux-system/weave-gitops/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/name: Weave GitOps
    gethomepage.dev/icon: weave-gitops.png
    gethomepage.dev/description: Flux CD Dashboard
spec:
  hostnames:
    - weave-gitops.${DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: ww-gitops-weave-gitops
          port: 9001
